move block diagram to a subdirectory and fix gitignores

--- a/bd/.gitignore
+++ b/bd/.gitignore
@@ -4,8 +4,8 @@
 *
 # Don't ignore directories.
 !*/
-# ignore the ip/ directory
-ip/
 # Don't ignore .gitignore and .bd files.
 !.gitignore
 !*.bd
+# Ignore directories named "ip/"
+*ip/
